[workspace]
members = [
    "keycodemap",
    "qemu-display",
    "qemu-rdw",
    "qemu-vnc",
    "qemu-vte",
    "xtask",
]

default-members = ["qemu-rdw"]

[patch.crates-io]
vnc = { git = "https://github.com/elmarco/rust-vnc", branch = "server" }
rdw4 = { git = "https://gitlab.gnome.org/malureau/rdw.git" }
