[package]
name = "qemu-gtk4"
version = "0.1.0"
authors = ["QEMU developpers <qemu-devel@nongnu.org>"]
edition = "2018"

[dependencies]
qemu-display-listener = { path = "../qemu-display-listener", features = ["glib"] }
keycodemap = { path = "../keycodemap" }
zbus = { version = "2.0.0-beta" }
log = "0.4"
pretty_env_logger = "0.4"
gettext-rs = { version = "0.5", features = ["gettext-system"] }
gtk-macros = "0.2"
once_cell = "1.5"
khronos-egl = { version = "3.0.0", features = ["dynamic"] }
libloading = "0.6"
gl = "0.14.0"
glib = { git = "https://github.com/gtk-rs/gtk-rs", optional = true }
derivative = "2.2.0"
gst = { package = "gstreamer", version = "0.16.7" }
gst-app = { package = "gstreamer-app", version = "0.16.5" }
gst-audio = { package = "gstreamer-audio", version = "0.16.5" }

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"
rev = "c43025157b12dba1112fad55962966769908a269"

[dependencies.gdk-wl]
package = "gdk4-wayland"
git = "https://github.com/gtk-rs/gtk4-rs"
rev = "c43025157b12dba1112fad55962966769908a269"

[dependencies.gdk-x11]
package = "gdk4-x11"
git = "https://github.com/gtk-rs/gtk4-rs"
rev = "c43025157b12dba1112fad55962966769908a269"
