[package]
name = "qemu-rdw"
version = "0.1.0"
authors = ["Marc-André Lureau <marcandre.lureau@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
once_cell = "1.5"
zbus = { version = "3.0" }
qemu-display = { path = "../qemu-display" }
keycodemap = { path = "../keycodemap" }
rdw = { package = "rdw4", version = "0.1", features = ["bindings"] }
futures-util = "0.3"
futures = "0.3"
async-trait = "0.1"
uds_windows = "1.0.2"
