[package]
name = "qemu-rdw"
version = "0.1.0"
authors = ["Marc-André Lureau <marcandre.lureau@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
qmp = ["qemu-display/qmp"]

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
once_cell = "1.5"
zbus = { version = "~3.3" }
qemu-display = { path = "../qemu-display" }
keycodemap = { path = "../keycodemap" }
rdw = { package = "rdw4", version = "0.1", features = ["bindings"] }
futures-util = "0.3"
futures = "0.3"
async-trait = "0.1"
tracing-subscriber = { version = "0.3.11", features = ["env-filter" , "fmt"], default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
uds_windows = "1.0.2"
windows = { version = "0.43.0", features = ["Win32_System_Memory", "Win32_Foundation"] }
