[package]
name = "qemu-vnc"
version = "0.1.0"
authors = ["Marc-André Lureau <marcandre.lureau@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qemu-display = { path = "../qemu-display" }
keycodemap = { path ="../keycodemap" }
vnc = "0.4.0"
clap = "3.0.0-beta.2"
zbus = { version = "2.0.0-beta.7" }
libc = "0.2.86"
image = "0.23.14"
derivative = "2.2.0"
async-io = "1.3.1"
async-trait = "0.1.48"
