[package]
name = "qemu-vte"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
once_cell = "1.5"
zbus = { version = "2.0.0-beta" }
qemu-display = { path = "../qemu-display", features = ["glib"] }
futures = "0.3.13"

[dependencies.vte]
package = "vte4"
git = "https://gitlab.gnome.org/malureau/vte4-rs"
